--- a/ProiectPIU.csproj
+++ b/ProiectPIU.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,10 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministrareFisierText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transaction.cs" />
-    <Compile Include="TransactionMenu.cs" />
+    <Compile Include="Tranzactie.cs" />
+    <Compile Include="MeniuTranzactii.cs" />
+    <Compile Include="Utilitati.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
