--- a/InterfataUtilizator_WindowsForms/InterfataUtilizator_WindowsForms.csproj
+++ b/InterfataUtilizator_WindowsForms/InterfataUtilizator_WindowsForms.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7572CE94-3558-4983-B16C-A28BB3494AE1}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>AplicatieTranzactii</RootNamespace>
-    <AssemblyName>AplicatieTranzactii</AssemblyName>
+    <ProjectGuid>{DDB92C6D-2966-4223-8531-9B0F486A8090}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>InterfataUtilizator_WindowsForms</RootNamespace>
+    <AssemblyName>InterfataUtilizator_WindowsForms</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,28 +36,56 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MeniuTranzactii.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="LibrarieModele\LibrarieModele.csproj">
+    <ProjectReference Include="..\LibrarieModele\LibrarieModele.csproj">
       <Project>{b150fcb3-5389-4b0e-8c7e-a8597386c570}</Project>
       <Name>LibrarieModele</Name>
     </ProjectReference>
-    <ProjectReference Include="NivelStocareDate\NivelStocareDate.csproj">
+    <ProjectReference Include="..\NivelStocareDate\NivelStocareDate.csproj">
       <Project>{2db69eee-dffd-413c-ad31-9ae0fc23bbf4}</Project>
       <Name>NivelStocareDate</Name>
     </ProjectReference>
