--- a/LibrarieModele/LibrarieModele.csproj
+++ b/LibrarieModele/LibrarieModele.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7572CE94-3558-4983-B16C-A28BB3494AE1}</ProjectGuid>
+    <ProjectGuid>{B150FCB3-5389-4B0E-8C7E-A8597386C570}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AplicatieTranzactii</RootNamespace>
-    <AssemblyName>AplicatieTranzactii</AssemblyName>
+    <RootNamespace>LibrarieModele</RootNamespace>
+    <AssemblyName>LibrarieModele</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,9 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,20 +45,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MeniuTranzactii.cs" />
+    <Compile Include="Tranzactie.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="LibrarieModele\LibrarieModele.csproj">
-      <Project>{b150fcb3-5389-4b0e-8c7e-a8597386c570}</Project>
-      <Name>LibrarieModele</Name>
-    </ProjectReference>
-    <ProjectReference Include="NivelStocareDate\NivelStocareDate.csproj">
-      <Project>{2db69eee-dffd-413c-ad31-9ae0fc23bbf4}</Project>
-      <Name>NivelStocareDate</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
