--- a/NivelStocareDate/NivelStocareDate.csproj
+++ b/NivelStocareDate/NivelStocareDate.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7572CE94-3558-4983-B16C-A28BB3494AE1}</ProjectGuid>
+    <ProjectGuid>{2DB69EEE-DFFD-413C-AD31-9AE0FC23BBF4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AplicatieTranzactii</RootNamespace>
-    <AssemblyName>AplicatieTranzactii</AssemblyName>
+    <RootNamespace>NivelStocareDate</RootNamespace>
+    <AssemblyName>NivelStocareDate</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,9 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,21 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministrareFisierText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MeniuTranzactii.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="LibrarieModele\LibrarieModele.csproj">
+    <ProjectReference Include="..\LibrarieModele\LibrarieModele.csproj">
       <Project>{b150fcb3-5389-4b0e-8c7e-a8597386c570}</Project>
       <Name>LibrarieModele</Name>
-    </ProjectReference>
-    <ProjectReference Include="NivelStocareDate\NivelStocareDate.csproj">
-      <Project>{2db69eee-dffd-413c-ad31-9ae0fc23bbf4}</Project>
-      <Name>NivelStocareDate</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
